--- a/index.html
+++ b/index.html
@@ -6,26 +6,134 @@
     <title>BINGSHU ZHANG</title>
     <link rel="stylesheet" type="text/css" href="../mrcho33.github.io/css/index.css" />
 </head>
-<body>
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onbeforecopy="return false" onmouseup=document.selection.empty() oncopy=document.selection.empty() onselect=document.selection.empty()>
+  <!-- header -->
   <header>
       <h3>BINGSHU ZHANG</h3>
       <nav>
           <ul>
+              <li><a href="../mrcho33.github.io/index.html">HOME</a></li>
               <li><a href="#" id="submenu">PROJECT</a></li>
               <li><a href="#">PROFILE</a></li>
               <li><a href="#">CONTANT</a></li>
-              <li><a href="https://github.com/mrcho33"><img src="../mrcho33.github.io/img/github.svg" style="width: 24px; height: 24px; margin-top: 18px;"></a></li>
+              <li><a href="https://sisendesign.zcool.com.cn/" target="_blank"><img src="../mrcho33.github.io/img/zcool-fill.svg" style="width: 24px; height: 24px; margin-top: 18px;"></a></li>
+              <li><a href="https://www.behance.net/mrcho/" target="_blank"><img src="../mrcho33.github.io/img/behance.svg" style="width: 24px; height: 24px; margin-top: 18px;"></a></li>
           </ul>
       </nav>
   </header>
   <div class="submenu">
     <ul>
-        <li><a href="#">Graphic</a></li>
+        <li><a href="#">Illustration</a></li>
+        <li><a href="#">Movie</a><i>/</i></li>
+        <li><a href="#">Logo</a><i>/</i></li>
+        <li><a href="#">Graphics</a><i>/</i></li>
         <li><a href="#">App</a><i>/</i></li>
         <li><a href="#">Web</a><i>/</i></li>
     </ul>
   </div>
-  <div style="height: 800px; width: 300ox; background-color: aquamarine;"><img src=""></div>
+  <!-- header -->
+  <!-- list -->
+  <div class="mid_content">
+      <div class="mid">
+          <div class="works">
+              <a href="../mrcho33.github.io/abmp.html">
+                  <img src="../mrcho33.github.io/img/ac/个人工作台.png">
+              </a>
+              <strong>Accenture Business Middle-Platform</strong>
+              <p>Client : Accenture</p>
+              <p>Business Analyst : Bingshu Zhang etc.</p>
+              <p>UI/UX Designer : Bingshu Zhang</p>
+              <p>Year : 2020</p>
+          </div>
+          <div class="works">
+            <a href="..//mrcho33.github.io/poc.html">
+                <img src="../mrcho33.github.io/img/poc/首页.png">
+            </a>
+            <strong>SAIC Volkswagen RiSE POC</strong>
+            <p>Client : SAIC Volkswagen</p>
+            <p>Business Analyst : Bingshu Zhang etc.</p>
+            <p>UI Designer : Bingshu Zhang</p>
+            <p>Year : 2020</p>
+          </div>
+          <div class="works">
+            <a href="../mrcho33.github.io/hw3d.html">
+                <img src="../mrcho33.github.io/img/huawei3d/20190320-134922(eSpace).jpg">
+            </a>
+            <strong>Huawei 3D Content Platform</strong>
+            <p>Client : Huawei</p>
+            <p>Business Analyst : Bingshu Zhang etc.</p>
+            <p>UI/UX Designer : Bingshu Zhang</p>
+            <p>Year : 2018-2019</p>
+          </div>
+          <div class="works">
+            <a href="#">
+                <img src="../mrcho33.github.io/img/poc/首页.png">
+            </a>
+            <strong>Huawei Developer Forum</strong>
+            <p>Client : Huawei</p>
+            <p>Product Manager : Feng Zhao</p>
+            <p>UI/UX Designer : Bingshu Zhang etc.</p>
+            <p>Year : 2019-2020</p>
+        </div>
+      </div>
+      <div class="mid">
+        <div class="works">
+            <a href="#">
+                <img src="../mrcho33.github.io/img/ac/个人工作台.png">
+            </a>
+            <strong>Accenture Business Middle-Platform</strong>
+            <p>Client : Accenture</p>
+            <p>Business analyst : Bingshu Zhang etc.</p>
+            <p>UI/UX designer : Bingshu Zhang</p>
+            <p>Year : 2020</p>
+        </div>
+        <div class="works">
+          <a href="#">
+              <img src="../mrcho33.github.io/img/poc/首页.png">
+          </a>
+          <strong>SAIC Volkswagen RiSE POC</strong>
+          <p>Client : SAIC Volkswagen</p>
+          <p>Business analyst : Bingshu Zhang etc.</p>
+          <p>UI designer : Bingshu Zhang</p>
+          <p>Year : 2020</p>
+        </div>
+        <div class="works">
+          <a href="#">
+              <img src="../mrcho33.github.io/img/poc/首页.png">
+          </a>
+          <strong>Huawei 3D content platform</strong>
+          <p>Client : Huawei</p>
+          <p>Business analyst : Bingshu Zhang etc.</p>
+          <p>UI/UX designer : Bingshu Zhang</p>
+          <p>Year : 2019-2020</p>
+        </div>
+        <div class="works">
+          <a href="#">
+              <img src="../mrcho33.github.io/img/poc/首页.png">
+          </a>
+          <strong>Huawei Developer Forum</strong>
+          <p>Client : Huawei</p>
+          <p>Product Manager : Feng Zhao</p>
+          <p>UI/UX designer : Bingshu Zhang etc.</p>
+          <p>Year : 2019-2020</p>
+      </div>
+    </div>
+  </div>
+  <!-- list -->
+  <!-- footr -->
+  <footer>
+    <p style="font-size: 16px;">Follow me</p>
+    <div class="footer_fm">
+      <ul>
+        <li><a href="https://github.com/mrcho33" target="_blank"><img src="../mrcho33.github.io/img/github.svg" style="width: 32px; height: 32px;"></a></li>
+        <li><a href="https://sisendesign.zcool.com.cn/" target="_blank"><img src="../mrcho33.github.io/img/zcool-fill.svg" style="width: 32px; height: 32px;"></a></li>
+        <li><a href="https://www.behance.net/mrcho/" target="_blank"><img src="../mrcho33.github.io/img/behance.svg" style="width: 32px; height: 32px;"></a></li>
+        <li><a href="https://weibo.com/mrcho11" target="_blank"><img src="../mrcho33.github.io/img/weibo.svg" style="width: 32px; height: 32px;"></a></li>
+      </ul>
+    </div>
+    <p>Copyright BINGSHU ZHANG All Rights Reserved.</p>
+  </footer>
+  <!-- footr -->
 
   <script>
       var subMenuHover = document.querySelector('#submenu')
