--- a/hw3d.html
+++ b/hw3d.html
@@ -9,28 +9,27 @@
 <body oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onbeforecopy="return false" onmouseup=document.selection.empty() oncopy=document.selection.empty() onselect=document.selection.empty()>
   <!-- header -->
   <header>
-      <h3>BINGSHU ZHANG</h3>
-      <nav>
-          <ul>
-              <li><a href="../mrcho33.github.io/index.html">HOME</a></li>
-              <li><a href="#" id="submenu">PROJECT</a></li>
-              <li><a href="#">PROFILE</a></li>
-              <li><a href="#">CONTANT</a></li>
-              <li><a href="https://sisendesign.zcool.com.cn/" target="_blank"><img src="../mrcho33.github.io/img/zcool-fill.svg" style="width: 24px; height: 24px; margin-top: 18px;"></a></li>
-              <li><a href="https://www.behance.net/mrcho/" target="_blank"><img src="../mrcho33.github.io/img/behance.svg" style="width: 24px; height: 24px; margin-top: 18px;"></a></li>
-          </ul>
-      </nav>
+    <h3>BINGSHU ZHANG</h3>
+    <nav>
+        <ul>
+            <li><a href="../mrcho33.github.io/index.html">HOME</a></li>
+            <li><a href="#" id="submenu">PROJECT</a>               
+                <ul class="submenu">
+                    <li><a href="#">Illustration</a></li>
+                    <li><a href="#">Movie</a><i>/</i></li>
+                    <li><a href="#">Logo</a><i>/</i></li>
+                    <li><a href="#">Graphics</a><i>/</i></li>
+                    <li><a href="#">App</a><i>/</i></li>
+                    <li><a href="#">Web</a><i>/</i></li>
+                </ul> 
+            </li>
+            <li><a href="#">PROFILE</a></li>
+            <li><a href="#">CONTANT</a></li>
+            <li><a href="https://sisendesign.zcool.com.cn/" target="_blank"><img src="../mrcho33.github.io/img/zcool-fill.svg" style="width: 24px; height: 24px; margin-top: 18px;"></a></li>
+            <li><a href="https://www.behance.net/mrcho/" target="_blank"><img src="../mrcho33.github.io/img/behance.svg" style="width: 24px; height: 24px; margin-top: 18px;"></a></li>
+        </ul>
+    </nav>
   </header>
-  <div class="submenu">
-    <ul>
-        <li><a href="#">Illustration</a></li>
-        <li><a href="#">Movie</a><i>/</i></li>
-        <li><a href="#">Logo</a><i>/</i></li>
-        <li><a href="#">Graphics</a><i>/</i></li>
-        <li><a href="#">App</a><i>/</i></li>
-        <li><a href="#">Web</a><i>/</i></li>
-    </ul>
-  </div>
   <!-- header -->
   <!-- list -->
   <div class="work_mid_content">
@@ -41,8 +40,9 @@
             <a href="https://developer.huawei.com/consumer/vector/" target="_blank">visit site</a>
           </div>
           <img src="../mrcho33.github.io/img/huawei3d/20190320-134922(eSpace).jpg">
-          <img src="../mrcho33.github.io/img/ac/login_03.png">
-          <img src="../mrcho33.github.io/img/ac/更新零售订单.png">
+          <img src="../mrcho33.github.io/img/huawei3d/huawei-white0424.jpg">
+          <img src="../mrcho33.github.io/img/huawei3d/专题列表0718.jpg">
+          <img src="../mrcho33.github.io/img/huawei3d/材质-编辑-更多图片.jpg">
           <table class="work_tb">
             <tbody>
               <tr>
