--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
       <nav>
           <ul>
               <li><a href="../mrcho33.github.io/index.html">HOME</a></li>
-              <li><a href="#" id="submenu">PROJECT</a></li>
+              <li><a href="#" id="submenu">PROJECT</a>               
+                  <ul class="submenu">
+                      <li><a href="#">Illustration</a></li>
+                      <li><a href="#">Movie</a><i>/</i></li>
+                      <li><a href="#">Logo</a><i>/</i></li>
+                      <li><a href="#">Graphics</a><i>/</i></li>
+                      <li><a href="#">App</a><i>/</i></li>
+                      <li><a href="#">Web</a><i>/</i></li>
+                  </ul> 
+              </li>
               <li><a href="#">PROFILE</a></li>
               <li><a href="#">CONTANT</a></li>
               <li><a href="https://sisendesign.zcool.com.cn/" target="_blank"><img src="../mrcho33.github.io/img/zcool-fill.svg" style="width: 24px; height: 24px; margin-top: 18px;"></a></li>
@@ -21,16 +30,7 @@
           </ul>
       </nav>
   </header>
-  <div class="submenu">
-    <ul>
-        <li><a href="#">Illustration</a></li>
-        <li><a href="#">Movie</a><i>/</i></li>
-        <li><a href="#">Logo</a><i>/</i></li>
-        <li><a href="#">Graphics</a><i>/</i></li>
-        <li><a href="#">App</a><i>/</i></li>
-        <li><a href="#">Web</a><i>/</i></li>
-    </ul>
-  </div>
+  
   <!-- header -->
   <!-- list -->
   <div class="mid_content">
@@ -66,56 +66,56 @@
             <p>Year : 2018-2019</p>
           </div>
           <div class="works">
-            <a href="#">
-                <img src="../mrcho33.github.io/img/poc/首页.png">
+            <a href="../mrcho33.github.io/hwcou.html">
+                <img src="../mrcho33.github.io/img/huaweicoum/微信截图_20210221110348.png">
             </a>
             <strong>Huawei Developer Forum</strong>
             <p>Client : Huawei</p>
             <p>Product Manager : Feng Zhao</p>
             <p>UI/UX Designer : Bingshu Zhang etc.</p>
-            <p>Year : 2019-2020</p>
+            <p>Year : 2018-2019</p>
         </div>
       </div>
       <div class="mid">
         <div class="works">
-            <a href="#">
-                <img src="../mrcho33.github.io/img/ac/个人工作台.png">
+            <a href="../mrcho33.github.io/qmenu.html">
+                <img src="../mrcho33.github.io/img/qmenu/q2.jpg">
             </a>
-            <strong>Accenture Business Middle-Platform</strong>
-            <p>Client : Accenture</p>
-            <p>Business analyst : Bingshu Zhang etc.</p>
-            <p>UI/UX designer : Bingshu Zhang</p>
-            <p>Year : 2020</p>
+            <strong>Qmenu</strong>
+            <p>Client : WSST JAPAN株式会社</p>
+            <p>Business Analyst : Bingshu Zhang etc.</p>
+            <p>UI/UX Designer : Bingshu Zhang</p>
+            <p>Year : 2019</p>
         </div>
         <div class="works">
-          <a href="#">
-              <img src="../mrcho33.github.io/img/poc/首页.png">
+          <a href="../mrcho33.github.io/kennels.html">
+            <img src="../mrcho33.github.io/img/The Kennels Tokyo/k1.jpg">
           </a>
-          <strong>SAIC Volkswagen RiSE POC</strong>
-          <p>Client : SAIC Volkswagen</p>
-          <p>Business analyst : Bingshu Zhang etc.</p>
-          <p>UI designer : Bingshu Zhang</p>
-          <p>Year : 2020</p>
+          <strong>The Kennels Tokyo </strong>
+          <p>Client : 株式会社グローバル・ホテルマネジメント</p>
+          <p>Art Direct : Nishide Mika</p>
+          <p>Graphic Designer : Bingshu Zhang</p>
+          <p>Year : 2018</p>
         </div>
         <div class="works">
-          <a href="#">
-              <img src="../mrcho33.github.io/img/poc/首页.png">
+          <a href="../mrcho33.github.io/kasuo bushi.html">
+              <img src="../mrcho33.github.io/img/katuobushi/k1.jpg">
           </a>
-          <strong>Huawei 3D content platform</strong>
-          <p>Client : Huawei</p>
-          <p>Business analyst : Bingshu Zhang etc.</p>
-          <p>UI/UX designer : Bingshu Zhang</p>
-          <p>Year : 2019-2020</p>
+          <strong>KASUO BUSHI</strong>
+          <p>Client : 株式会社にんべん</p>
+          <p>Front-end Developer : Bingshu Zhang</p>
+          <p>UI Designer : Bingshu Zhang</p>
+          <p>Year : 2018</p>
         </div>
         <div class="works">
-          <a href="#">
-              <img src="../mrcho33.github.io/img/poc/首页.png">
+          <a href="../mrcho33.github.io/yamanashi.html">
+              <img src="../mrcho33.github.io/img/yamanashi/y8.jpg">
           </a>
-          <strong>Huawei Developer Forum</strong>
-          <p>Client : Huawei</p>
-          <p>Product Manager : Feng Zhao</p>
-          <p>UI/UX designer : Bingshu Zhang etc.</p>
-          <p>Year : 2019-2020</p>
+          <strong>「GI Yamanashi を聴いて唎く集い」</strong>
+          <p>Client : 東京国税局様／株式会社JTB様</p>
+          <p>Producer : Nishide Mika</p>
+          <p>Designer : Bingshu Zhang</p>
+          <p>Year : 2018</p>
       </div>
     </div>
   </div>
